@@ -1,3 +1,8 @@
+2006-05-18  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/Services/layout/slots.py: fix several NameErrors (cut
+	and paste errors).
+
 2006-05-09  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* configure.in (SW_VERSION), configure, SkunkWeb/configure.in,
